tests/baselines/reference/nonexistentPropertyUnavailableOnPromisedType.errors.txt
nonexistentPropertyUnavailableOnPromisedType.ts(2,7): error TS2339: Property 'toLowerCase' does not exist on type 'Promise<number>'.


==== nonexistentPropertyUnavailableOnPromisedType.ts (1 errors) ====
    function f(x: Promise<number>) {
        x.toLowerCase();
          ~~~~~~~~~~~
!!! error TS2339: Property 'toLowerCase' does not exist on type 'Promise<number>'.
    }
    